cmake_minimum_required(VERSION 3.26)
project(problems C)

set(CMAKE_C_STANDARD 11)

add_library(commonlib STATIC include/common.c include/common.h)
link_libraries(commonlib)

add_executable(problems main.c)

add_executable(pp.2.12 pp/pp.2.12.c)
add_executable(pp.2.13 pp/pp.2.13.c)
add_executable(pp.2.15 pp/pp.2.15.c)
add_executable(pp.2.36 pp/pp.2.36.c)
add_executable(pp.2.40 pp/pp.2.40.c)
add_executable(pp.2.42 pp/pp.2.42.c)
add_executable(test_java_intBitsToFloat tests/test_java_intBitsToFloat.c)
add_executable(hw.2.57 hw/hw.2.57.c)
add_executable(hw.2.58 hw/hw.2.58.c)
add_executable(hw.2.59 hw/hw.2.59.c)
add_executable(hw.2.60 hw/hw.2.60.c)
add_executable(hw.2.61 hw/hw.2.61.c)
add_executable(hw.2.62 hw/hw.2.62.c)
add_executable(hw.2.63 hw/hw.2.63.c)
add_executable(hw.2.64 hw/hw.2.64.c)
add_executable(hw.2.69 hw/hw.2.69.c)
add_executable(hw.2.70 hw/hw.2.70.c)
add_executable(hw.2.73 hw/hw.2.73.c)
add_executable(pp.2.74 hw/pp.2.74.c)
add_executable(hw.2.80 hw/hw.2.80.c)
add_executable(sc_hw_1 tests/sc_hw_1.c)
